name:                rate-limited-io
version:             0.4.0.1
synopsis:
  A library that facilitates graceful handling of IO actions which are rate limited by some external party (e.g. connecting to the Twitter api).    
description:         
  A library that facilitates graceful handling of IO actions which are rate limited by some external party (e.g. connecting to the Twitter api).    
homepage:            https://github.com/SumAll/haskell-rate-limited-io
license:             Apache-2.0
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owenssoftware.com            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Control.Concurrent.RateLimitedIO   
  build-depends:
    base         >= 4.9.1.0 && < 4.12,
    data-default >= 0.7.1.1 && < 0.8,
    stm          >= 2.4.4.1 && < 2.5
  hs-source-dirs:      src
  default-language:    Haskell2010
